--- a/example.html
+++ b/example.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Foundation for Sites</title>
+    <link rel="stylesheet" href="foundation/css/foundation.css">
+    <link rel="stylesheet" href="foundation/css/app.css">
+  </head>
+  <body>
 
-
-<h1>This is a <a href="https://google.com">Heading</a></h1>
-<p>This is a paragraph.</p>
-<!-- here's a comment -->
-
-<ol>
-  <li>item 1</li>
-  <li>item 2</li>
-  <li>item 3</li>
-</ol>
-
-
-
-</body>
+    <script src="foundation/js/vendor/jquery.js"></script>
+    <script src="foundation/js/vendor/what-input.js"></script>
+    <script src="foundation/js/vendor/foundation.js"></script>
+    <script src="foundation/js/app.js"></script>
+  </body>
 </html>
